shodrone.core/src/main/java/dsl/generated_code/DSL_FIGUREParser.java
// Generated from DSL_FIGURE.g4 by ANTLR 4.13.0
package dsl.generated_code;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DSL_FIGUREParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, PAUSE_STATEMENT=28, RED=29, GREEN=30, BLUE=31, 
		YELLOW=32, PI=33, PI_DIV_EXPR=34, DECIMAL_LIT=35, COORDINATE=36, LPAREN=37, 
		RPAREN=38, SEMICOLON=39, COMMA=40, NUMBER=41, VERSION=42, ID=43, WHITESPACE=44, 
		COMMENT=45;
	public static final int
		RULE_program = 0, RULE_dslVersion = 1, RULE_declarations = 2, RULE_declaration = 3, 
		RULE_droneTypeDeclaration = 4, RULE_positionDeclaration = 5, RULE_velocityDeclaration = 6, 
		RULE_velocityExpr = 7, RULE_distanceDeclaration = 8, RULE_figureDeclaration = 9, 
		RULE_figureParam = 10, RULE_expression = 11, RULE_statements = 12, RULE_statement = 13, 
		RULE_beforeBlock = 14, RULE_afterBlock = 15, RULE_groupBlock = 16, RULE_blockContent = 17, 
		RULE_singleAction = 18, RULE_figureAction = 19, RULE_distanceValue = 20, 
		RULE_velocityValue = 21, RULE_rotationValue = 22, RULE_colorValue = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "dslVersion", "declarations", "declaration", "droneTypeDeclaration", 
			"positionDeclaration", "velocityDeclaration", "velocityExpr", "distanceDeclaration", 
			"figureDeclaration", "figureParam", "expression", "statements", "statement", 
			"beforeBlock", "afterBlock", "groupBlock", "blockContent", "singleAction", 
			"figureAction", "distanceValue", "velocityValue", "rotationValue", "colorValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DSL'", "'version'", "'DroneType'", "'Position'", "'='", "'Velocity'", 
			"'Distance'", "'Line'", "'Rectangle'", "'Circle'", "'Circumference'", 
			"'-'", "'*'", "'/'", "'+'", "'before'", "'endbefore'", "'after'", "'endafter'", 
			"'group'", "'endgroup'", "'.'", "'lightsOn'", "'lightsOff'", "'move'", 
			"'movePos'", "'rotate'", null, "'RED'", "'GREEN'", "'BLUE'", "'YELLOW'", 
			"'PI'", null, null, null, "'('", "')'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "PAUSE_STATEMENT", "RED", "GREEN", "BLUE", "YELLOW", 
			"PI", "PI_DIV_EXPR", "DECIMAL_LIT", "COORDINATE", "LPAREN", "RPAREN", 
			"SEMICOLON", "COMMA", "NUMBER", "VERSION", "ID", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSL_FIGURE.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSL_FIGUREParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DslVersionContext dslVersion() {
			return getRuleContext(DslVersionContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DSL_FIGUREParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			dslVersion();
			setState(49);
			declarations();
			setState(50);
			statements();
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DslVersionContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(DSL_FIGUREParser.VERSION, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public DslVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dslVersion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterDslVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitDslVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitDslVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DslVersionContext dslVersion() throws RecognitionException {
		DslVersionContext _localctx = new DslVersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dslVersion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__0);
			setState(54);
			match(T__1);
			setState(55);
			match(VERSION);
			setState(56);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4056L) != 0)) {
				{
				{
				setState(58);
				declaration();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DroneTypeDeclarationContext droneTypeDeclaration() {
			return getRuleContext(DroneTypeDeclarationContext.class,0);
		}
		public PositionDeclarationContext positionDeclaration() {
			return getRuleContext(PositionDeclarationContext.class,0);
		}
		public VelocityDeclarationContext velocityDeclaration() {
			return getRuleContext(VelocityDeclarationContext.class,0);
		}
		public DistanceDeclarationContext distanceDeclaration() {
			return getRuleContext(DistanceDeclarationContext.class,0);
		}
		public FigureDeclarationContext figureDeclaration() {
			return getRuleContext(FigureDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				droneTypeDeclaration();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				positionDeclaration();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				velocityDeclaration();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				distanceDeclaration();
				}
				break;
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				figureDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneTypeDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_FIGUREParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public DroneTypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_droneTypeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterDroneTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitDroneTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitDroneTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneTypeDeclarationContext droneTypeDeclaration() throws RecognitionException {
		DroneTypeDeclarationContext _localctx = new DroneTypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_droneTypeDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__2);
			setState(72);
			match(ID);
			setState(73);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PositionDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_FIGUREParser.ID, 0); }
		public TerminalNode COORDINATE() { return getToken(DSL_FIGUREParser.COORDINATE, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public PositionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterPositionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitPositionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitPositionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PositionDeclarationContext positionDeclaration() throws RecognitionException {
		PositionDeclarationContext _localctx = new PositionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_positionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__3);
			setState(76);
			match(ID);
			setState(77);
			match(T__4);
			setState(78);
			match(COORDINATE);
			setState(79);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DSL_FIGUREParser.ID, 0); }
		public VelocityExprContext velocityExpr() {
			return getRuleContext(VelocityExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public VelocityDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocityDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterVelocityDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitVelocityDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitVelocityDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityDeclarationContext velocityDeclaration() throws RecognitionException {
		VelocityDeclarationContext _localctx = new VelocityDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_velocityDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__5);
			setState(82);
			match(ID);
			setState(83);
			match(T__4);
			setState(84);
			velocityExpr();
			setState(85);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityExprContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(DSL_FIGUREParser.NUMBER, 0); }
		public TerminalNode DECIMAL_LIT() { return getToken(DSL_FIGUREParser.DECIMAL_LIT, 0); }
		public TerminalNode PI_DIV_EXPR() { return getToken(DSL_FIGUREParser.PI_DIV_EXPR, 0); }
		public TerminalNode ID() { return getToken(DSL_FIGUREParser.ID, 0); }
		public VelocityExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocityExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterVelocityExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitVelocityExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitVelocityExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityExprContext velocityExpr() throws RecognitionException {
		VelocityExprContext _localctx = new VelocityExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_velocityExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 11046655885312L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DistanceDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DSL_FIGUREParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DSL_FIGUREParser.ID, i);
		}
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public TerminalNode NUMBER() { return getToken(DSL_FIGUREParser.NUMBER, 0); }
		public DistanceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distanceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterDistanceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitDistanceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitDistanceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DistanceDeclarationContext distanceDeclaration() throws RecognitionException {
		DistanceDeclarationContext _localctx = new DistanceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_distanceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__6);
			setState(90);
			match(ID);
			setState(91);
			match(T__4);
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(93);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FigureDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DSL_FIGUREParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DSL_FIGUREParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(DSL_FIGUREParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DSL_FIGUREParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DSL_FIGUREParser.COMMA, i);
		}
		public List<FigureParamContext> figureParam() {
			return getRuleContexts(FigureParamContext.class);
		}
		public FigureParamContext figureParam(int i) {
			return getRuleContext(FigureParamContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(DSL_FIGUREParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(DSL_FIGUREParser.SEMICOLON, 0); }
		public FigureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_figureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterFigureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitFigureDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitFigureDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FigureDeclarationContext figureDeclaration() throws RecognitionException {
		FigureDeclarationContext _localctx = new FigureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_figureDeclaration);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(T__7);
				setState(96);
				match(ID);
				setState(97);
				match(LPAREN);
				setState(98);
				match(ID);
				setState(99);
				match(COMMA);
				setState(100);
				figureParam();
				setState(101);
				match(COMMA);
				setState(102);
				match(ID);
				setState(103);
				match(RPAREN);
				setState(104);
				match(SEMICOLON);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(T__8);
				setState(107);
				match(ID);
				setState(108);
				match(LPAREN);
				setState(109);
				match(ID);
				setState(110);
				match(COMMA);
				setState(111);
				figureParam();
				setState(112);
				match(COMMA);
				setState(113);
				figureParam();
				setState(114);
				match(COMMA);
				setState(115);
				match(ID);
				setState(116);
				match(RPAREN);
				setState(117);
				match(SEMICOLON);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(T__9);
				setState(120);
				match(ID);
				setState(121);
				match(LPAREN);
				setState(122);
				match(ID);
				setState(123);
				match(COMMA);
				setState(124);
				figureParam();
				setState(125);
				match(COMMA);
				setState(126);
				match(ID);
				setState(127);
				match(RPAREN);
				setState(128);
				match(SEMICOLON);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				match(T__10);
				setState(131);
				match(ID);
				setState(132);
				match(LPAREN);
				setState(133);
				match(ID);
				setState(134);
				match(COMMA);
				setState(135);
				figureParam();
				setState(136);
				match(COMMA);
				setState(137);
				match(ID);
				setState(138);
				match(RPAREN);
				setState(139);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FigureParamContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ID() { return getToken(DSL_FIGUREParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(DSL_FIGUREParser.NUMBER, 0); }
		public FigureParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_figureParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).enterFigureParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSL_FIGUREListener ) ((DSL_FIGUREListener)listener).exitFigureParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSL_FIGUREVisitor ) return ((DSL_FIGUREVisitor<? extends T>)visitor).visitFigureParam(this);
			else return visitor.visitChildren(this);
		}
	}
